WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46434
DOMWindow::revokeBlobURL erroneously uses ParsedURLString
https://bugs.webkit.org/show_bug.cgi?id=46434
Summary
DOMWindow::revokeBlobURL erroneously uses ParsedURLString
Alexey Proskuryakov
Reported
2010-09-23 17:24:06 PDT
The argument comes from the caller, there is absolutely no guarantee that it's in the form KURL expects. This causes assertion failures whenever it's not (e.g. revokeBlobURL("[foo bar]"); For absolute URLs, we should just pass a null base: KURL(KURL(), string). But if it can be relative, a proper base should be passed.
Attachments
Proposed Patch
(6.19 KB, patch)
2010-09-23 18:20 PDT
,
Jian Li
ap
: review+
jianli
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2010-09-23 18:20:50 PDT
Created
attachment 68635
[details]
Proposed Patch
Jian Li
Comment 2
2010-09-24 11:04:00 PDT
Committed as
http://trac.webkit.org/changeset/68275
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug