DOMWindow::revokeBlobURL erroneously uses ParsedURLString. https://bugs.webkit.org/show_bug.cgi?id=46434

Reviewed by Alexey Proskuryakov.

WebCore:

Test: fast/files/revoke-blob-url.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::revokeBlobURL):

LayoutTests:

Add a test. Also update Skipped files for those not-supported platforms.

* fast/files/revoke-blob-url-expected.txt: Added.
* fast/files/revoke-blob-url.html: Added.
* platform/gtk/Skipped:
* platform/mac-wk2/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:

git-svn-id: svn://svn.chromium.org/blink/trunk@68275 bbb929c8-8fbe-4397-9dbb-9b2b20218538