third_party/WebKit/WebCore/page/DOMWindow.cpp
@@ -1600,7 +1600,7 @@ String DOMWindow::createBlobURL(Blob* blob)
 
 void DOMWindow::revokeBlobURL(const String& blobURLString)
 {
-    scriptExecutionContext()->revokePublicBlobURL(KURL(ParsedURLString, blobURLString));
+    scriptExecutionContext()->revokePublicBlobURL(KURL(KURL(), blobURLString));
 }
 #endif
 
